# perception_ros

ros_yolov5/: package.xml
ros_yolov5/launch/: yolo_v5.launch
ros_yolov5/ros_yolov5/: CMakeLists.txt
ros_yolov5/ros_yolov5/launch/: yolo_v5.launch
ros_yolov5/ros_yolov5/scripts/: yolo_v5.py
ros_yolov5/scripts/: yolo_v5_copy.py
ros_yolov5_msgs/: CMakeLists.txt  package.xml
ros_yolov5_msgs/msg/: BoundingBox.msg
